Revision history for App-Doh

          - Added support for making Debian packages
          - Added missing middleware dependecies
          - Simplified load_components signature
          - Added make-site-tarball
          - Added caching to generate make function
          - Config monikers was replace with components
          - Model get_stash was renamed to initialise_stash
          - Updated prereqs
          - Made program wrappers work in taint mode

0.10.1    2015-05-11 00:39:33
          - Fixed memory leak in component DI
          - Made User class a model component and used DI
          - Implement dependency injection in components
          - ComponentLoading returns plain text 500 if Request->new fails
          - Added post_install and uninstall commands to CLI
          - Scripts sources a local env script
          - Toolchain now builds a Debian file

0.9.1     2015-01-04 16:01:57
          - Ajax requests now use JSON not XML
          - Added model_name to request object
          - API improvement ::Functions::load_components
          - Fixed search methods external call to ack
          - Made private functions and methods lexical subs

0.8.1     2014-10-31 01:08:36
          - Updated throw call syntax
          - Fixed decoding of body parameters
          - Component and input encoding defaults to config
          - Added maximum generation run time
          - URIs now properly enscaped
          - Improved Request API will instantiate from a hash

0.7.1     2014-09-19 00:23:42
          - Improved Request API raw params now private
          - Session secret now has more source options
          - Component loading respects + at the start of class names
          - Static generation no longer creates defunct process
          - Added editor CSS to repo for install off Github
          - Enabled ConditionalGET in Plack stack
          - Serve JS from content delivery network
          - Added t::boilerplate to tests
