@@ -10,16 +10,6 @@ bin/doh-cli
 bin/doh-daemon
 bin/doh-localenv
 bin/doh-server
-debian/app-doh.docs
-debian/changelog
-debian/compat
-debian/control
-debian/copyright
-debian/default
-debian/install
-debian/postinst
-debian/postrm
-debian/rules
 lib/App/Doh.pm
 lib/App/Doh/Attributes.pm
 lib/App/Doh/CLI.pm
