@@ -17,7 +17,7 @@ my $_build_usul = sub {
    my $attr = { config => $self->config, debug => env_var( 'DEBUG' ) // FALSE };
    my $conf = $attr->{config};
 
-   $conf->{appclass    } or  throw Unspecified, args => [ 'application class' ];
+   $conf->{appclass    } or  throw Unspecified, [ 'application class' ];
    $attr->{config_class} //= $conf->{appclass}.'::Config';
    $conf->{name        } //= app_prefix   $conf->{appclass};
    $conf->{home        } //= find_apphome $conf->{appclass}, $conf->{home};
